# lab9api

./: .env  alembic.ini  pyproject.toml
app/: main.py
app/core/: config.py  db.py
app/modules/employees/: views.py
app/modules/job/: views.py
